<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/produto_2"
        android:id="@+id/txtNomedoProduto"
        android:background="#fbfbfb"
        android:editable="false"
        android:textColor="@android:color/primary_text_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/quantidade_2"
            android:id="@+id/txtQuantidadedoProduto"
            android:layout_gravity="left"
            android:layout_marginRight="20dip"
            android:textColor="@color/accent_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/valor_2"
            android:id="@+id/txtValorUnitario"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dip"
            android:enabled="false"
            android:visibility="visible"
            android:textColor="@color/accent_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/valor_total_2"
            android:id="@+id/txtValorTotal"
            android:layout_gravity="right"
            android:layout_marginLeft="20dip"
            android:visibility="visible"
            android:textColor="@color/accent_material_light" />
    </LinearLayout>

</LinearLayout>
